--- a/css/bold.css
+++ b/css/bold.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-style: italic;
     background: black;
+    background-image: url("/images/bg.jpg");
     color: white;
 }
 
