--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         </title>
         <meta name="author" content="Mathias Gatti" />
     	<link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/bold.css" type="text/css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bold.css') }}" type="text/css" />
     </head>
     <body>
       <article>
