--- a/templates/page2.html
+++ b/templates/page2.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<link rel="stylesheet" href="puzzle/style.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='puzzle/style.css') }}">
 
 	<script>
 		function checkAnswer(){
