--- a/themes/anatole/layout/partial/layout.pug
+++ b/themes/anatole/layout/partial/layout.pug
@@ -13,3 +13,4 @@ html(lang="zh-CN")
     script(src= url_for('js/jquery.js'))
     script(src= url_for('js/jquery-migrate-1.2.1.min.js'))
     script(src= url_for('js/jquery.appear.js'))
+    script(src= url_for('js/shader.js'))
