--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -13,7 +13,7 @@
   <title><%= title.join(' - ') %></title>
 
   <!--Favicon-->
-  <link rel="icon" href="favicon/favicon.ico">
+  <link rel="icon" href="favicon/favicon.png">
 
   <!--Description-->
   <% if (page.description){ %>
