--- a/themes/edinburgh/source/css/styles.css
+++ b/themes/edinburgh/source/css/styles.css
@@ -87,10 +87,33 @@ h1, h2, h3 {
 }
 
 .portfolio-img {
-	width: 100%;
+	width: 50%;
 	max-height: 250px;
 	display: block;
 	object-fit: cover;
+}
+
+.portfolio-text {
+	width: 100%;
+	height: 250px;
+}
+
+
+.asd {
+  font-size: 2.0rem;
+  padding-top: 40px;
+}
+
+.asd2 {
+  width: 50%;
+}
+
+.description {
+	font-size: 1.2rem;
+	font-family: 'Crimson Text', sans-serif;
+	font-weight: 300;
+	margin: 0 10px;
+	color: #555;
 }
 
 .project-img {
@@ -163,10 +186,12 @@ h1, h2, h3 {
 	margin: 0 auto;
 	text-align: center;
 }
+
+
 .page-nav a,span {
 	font-size: 1.3rem;
 	font-family: 'Crimson Text', sans-serif;
 	font-weight: 300;
-	margin: 0 10px;
+	margin: 0 5px;
 	color: #000;
 }
