Readme and preview improvements

--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -11,19 +11,29 @@
       title.push(config.title);
   %>
   <title><%= title.join(' - ') %></title>
+  <meta property="og:title" content=%= title.join(' - ') %>
 
   <!--Favicon-->
   <link rel="icon" href="favicon/favicon.png">
 
+  <!--Preview Images-->
+  <meta property="og:image" content="https://mathigatti.com/about/mathigatti-photo.jpg">
+  <link rel="image_src" href="https://mathigatti.com/about/mathigatti-photo.jpg">
+
   <!--Description-->
   <% if (page.description){ %>
       <meta name="description" content="<%= page.description %>">
+      <meta property="og:description" content="<%= page.description %>">
+
   <% } else if (config.description){ %>
       <meta name="description" content="<%= config.description %>">
+      <meta property="og:description" content="<%= config.description %>">
   <% } else if (page.excerpt){ %>
       <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+      <meta property="og:description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
   <% } else if (page.content){ %>
       <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+      <meta property="og:description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
   <% } %>
 
   <!--Author-->
