--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -11,7 +11,7 @@
       title.push(config.title);
   %>
   <title><%= title.join(' - ') %></title>
-  <meta property="og:title" content=%= title.join(' - ') %>
+  <meta property="og:title" content=<%= title.join(' - ') %> >
 
   <!--Favicon-->
   <link rel="icon" href="favicon/favicon.png">
