--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -10,15 +10,21 @@
       if (page.title) title.push(page.title);
       title.push(config.title);
   %>
-  <title><%= title.join(' - ') %></title>
-  <meta property="og:title" content="<%= title.join(' - ') %>">
+  <title><%= page.title %></title>
+  <meta property="og:title" content="<%= page.title %>">
 
   <!--Favicon-->
   <link rel="icon" href="favicon/favicon.png">
 
   <!--Preview Images-->
-  <meta property="og:image" content="https://mathigatti.com/about/mathigatti-photo.jpg">
-  <link rel="image_src" href="https://mathigatti.com/about/mathigatti-photo.jpg">
+
+  <% if (page.cover_image){ %>
+    <meta property="og:image" content="https://mathigatti.com<%= page.cover_image %>">
+    <link rel="image_src" href="https://mathigatti.com<%= page.cover_image %>">
+  <% } else { %>
+    <meta property="og:image" content="https://mathigatti.com/images/pattern.png">
+    <link rel="image_src" href="https://mathigatti.com/images/pattern.png">
+  <% } %>
 
   <!--Description-->
   <% if (page.description){ %>
