--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -14,16 +14,16 @@
   <meta property="og:title" content="<%= page.title %>">
 
   <!--Favicon-->
-  <link rel="icon" href="favicon/favicon.png">
+  <link rel="icon" href="https://mathigatti.com/favicon/favicon.png">
 
   <!--Preview Images-->
 
   <% if (page.preview_image){ %>
     <meta property="og:image" content="https://mathigatti.com<%= page.preview_image %>">
-    <link rel="image_src" href="https://mathigatti.com<%= page.preview_image %>">
+    <link rel="image_src" href="<%= page.root %><%= page.preview_image %>">
   <% } else if (page.cover_image){ %>
     <meta property="og:image" content="https://mathigatti.com<%= page.cover_image %>">
-    <link rel="image_src" href="https://mathigatti.com<%= page.cover_image %>">
+    <link rel="image_src" href="<%= page.root %><%= page.cover_image %>">
   <% } else { %>
     <meta property="og:image" content="https://mathigatti.com/images/pattern.png">
     <link rel="image_src" href="https://mathigatti.com/images/pattern.png">
