--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -19,11 +19,11 @@
   <!--Preview Images-->
 
   <% if (page.preview_image){ %>
-    <meta property="og:image" content="https://mathigatti.com<%= page.preview_image %>">
-    <link rel="image_src" href="<%= page.root %><%= page.preview_image %>">
+    <meta property="og:image" content="<%= config.root %><%= page.preview_image %>">
+    <link rel="image_src" href="<%= config.root %><%= page.preview_image %>">
   <% } else if (page.cover_image){ %>
-    <meta property="og:image" content="https://mathigatti.com<%= page.cover_image %>">
-    <link rel="image_src" href="<%= page.root %><%= page.cover_image %>">
+    <meta property="og:image" content="<%= config.root %><%= page.cover_image %>">
+    <link rel="image_src" href="<%= config.root %><%= page.cover_image %>">
   <% } else { %>
     <meta property="og:image" content="https://mathigatti.com/images/pattern.png">
     <link rel="image_src" href="https://mathigatti.com/images/pattern.png">
