--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -11,43 +11,55 @@
       title.push(config.title);
   %>
   <title><%= page.title %></title>
+  <meta name="title" content="<%= page.title %>">
   <meta property="og:title" content="<%= page.title %>">
+  <meta property="twitter:title" content="<%= page.title %>">
+
   <!--Description-->
   <% if (page.description){ %>
-      <meta name="description" content="<%= page.description %>">
-      <meta property="og:description" content="<%= page.description %>">
+  <meta name="description" content="<%= page.description %>">
+  <meta property="og:description" content="<%= page.description %>">
+  <meta property="twitter:description" content="<%= page.description %>">
   <% } else if (config.description){ %>
-      <meta name="description" content="<%= config.description %>">
-      <meta property="og:description" content="<%= config.description %>">
+  <meta name="description" content="<%= config.description %>">
+  <meta property="og:description" content="<%= config.description %>">
+  <meta property="twitter:description" content="<%= config.description %>">
   <% } else if (page.excerpt){ %>
-      <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
-      <meta property="og:description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+  <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+  <meta property="og:description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+  <meta property="twitter:description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
   <% } else if (page.content){ %>
-      <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
-      <meta property="og:description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+  <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+  <meta property="og:description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+  <meta property="twitter:description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
   <% } %>
 
   <!--Favicon-->
   <link rel="icon" href="https://mathigatti.com/favicon/favicon.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mathigatti.com/">
+  <meta property="twitter:url" content="https://mathigatti.com/">
+  <meta property="twitter:card" content="summary_large_image">
 
   <!--Preview Images-->
-
   <% if (page.preview_image){ %>
-    <meta property="og:image" content="https://mathigatti.com/<%= page.preview_image %>">
-    <link rel="image_src" href="<%= config.root %><%= page.preview_image %>">
+  <meta property="og:image" content="https://mathigatti.com/<%= page.preview_image %>">
+  <meta property="twitter:image" content="https://mathigatti.com/<%= page.preview_image %>">
+  <link rel="image_src" href="<%= config.root %><%= page.preview_image %>">
   <% } else if (page.cover_image){ %>
-    <meta property="og:image" content="https://mathigatti.com/<%= page.cover_image %>">
-    <link rel="image_src" href="<%= config.root %><%= page.cover_image %>">
+  <meta property="og:image" content="https://mathigatti.com/<%= page.cover_image %>">
+  <meta property="twitter:image" content="https://mathigatti.com/<%= page.cover_image %>">
+  <link rel="image_src" href="<%= config.root %><%= page.cover_image %>">
   <% } else { %>
-    <meta property="og:image" content="https://mathigatti.com/images/pattern.png">
-    <link rel="image_src" href="https://mathigatti.com/images/pattern.png">
+  <meta property="og:image" content="https://mathigatti.com/images/pattern.png">
+  <meta property="twitter:image" content="https://mathigatti.com/images/pattern.png">
+  <link rel="image_src" href="https://mathigatti.com/images/pattern.png">
   <% } %>
 
   <!--Author-->
   <% if (config.author){ %>
-      <meta name="author" content="<%= config.author %>">
+  <meta name="author" content="<%= config.author %>">
   <% } %>
-  <meta name="twitter:card" content="summary_large_image">
 
   <!-- Pure CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
